fix: allowed titles of grouped items to stretch

--- a/src/app/metatype/metatype.component.css
+++ b/src/app/metatype/metatype.component.css
@@ -73,6 +73,10 @@ img {
   margin: 4px 0;
 }
 
+.fm-fill-space {
+  flex-basis: 75%;
+}
+
 .fm-metatype-project p {
   font-size: 16px;
   padding: 0;
